--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,23 +26,7 @@
       oops, impossible de sauvegarder la tâche
     </div>
     
-    <ul class="tasklist">
-      <li data-id="0">
-        <p>sortir les poubelles</p>
-        <div class="delete"></div>
-        <div class="edit"></div>
-      </li>
-      <li data-id="1">
-        <p>communiquer avec l'API</p>
-        <div class="delete"></div>
-        <div class="edit"></div>
-      </li>
-      <li data-id="2">
-        <p>organiser une free-party</p>
-        <div class="delete"></div>
-        <div class="edit"></div>
-      </li>
-    </ul>
+    <ul class="tasklist"></ul>
 
     <div class="modal-dialog">
       <form>
@@ -56,7 +40,7 @@
 
   </main>
 
-  <script src="../assets/promesse.js"></script>
+  <script src="js/app.js"></script>
 
 </body>
 </html>
