ajout formulaire d ajout de tache et catégorie. fonctionne pas avec les categories

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,6 +34,10 @@
         <label for="task-title" class="screen-reader-only">titre de la tâche</label>
         <input name= "id" id="task-id" type="hidden">
         <input name= "title" id="task-title" placeholder="titre de la tâche..." type="text" required>
+        
+        <!-- Nouveau champ pour saisir la catégorie -->
+        <label for="task-category" class="screen-reader-only">Catégorie de la tâche</label>
+        <input name="category" id="task-category" placeholder="Catégorie de la tâche..." type="text" required>
         <button>ajouter</button>
       </form>
     </div>
